Top part of the housing partial view

--- a/Odin/compilerconfig.json
+++ b/Odin/compilerconfig.json
@@ -1,5 +1,9 @@
 ﻿[
   {
+    "inputFile": "Content/css/primaryNav.scss",
+    "outputFile": "Content/css/primaryNav.css"
+  },
+  {
     "inputFile": "Content/css/orders.scss",
     "outputFile": "Content/css/orders.css"
   },
