Added input types and tests. Also some minor refactors.

--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -137,7 +137,7 @@
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeLeaseDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeOriginDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeRelocationDto.cs" />
-    <Compile Include="Core\Dtos\OrdersTransfereeIntakeRentDto.cs" />
+    <Compile Include="Core\Dtos\OrdersTransfereeIntakeHomeFindingDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeRmcDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeServiceDto.cs" />
     <Compile Include="Core\Dtos\OrdersTransfereeIntakeServicesDto.cs" />
@@ -410,9 +410,14 @@
     <Compile Include="Persistence\Migrations\201711022044450_RemovedDuplicateArrivalDate.cs" />
     <Compile Include="Persistence\Migrations\201711022044450_RemovedDuplicateArrivalDate.Designer.cs">
       <DependentUpon>201711022044450_RemovedDuplicateArrivalDate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\201711061758565_ChangeTriggerOnHomeFindingTable.cs" />
     <Compile Include="Persistence\Migrations\201711061758565_ChangeTriggerOnHomeFindingTable.Designer.cs">
       <DependentUpon>201711061758565_ChangeTriggerOnHomeFindingTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Persistence\Migrations\201711061818328_MergedInTriggerUpdateFromMaster.cs" />
+    <Compile Include="Persistence\Migrations\201711061818328_MergedInTriggerUpdateFromMaster.Designer.cs">
+      <DependentUpon>201711061818328_MergedInTriggerUpdateFromMaster.cs</DependentUpon>
     </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
@@ -587,8 +592,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201711022044450_RemovedDuplicateArrivalDate.resx">
       <DependentUpon>201711022044450_RemovedDuplicateArrivalDate.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201711061758565_ChangeTriggerOnHomeFindingTable.resx">
       <DependentUpon>201711061758565_ChangeTriggerOnHomeFindingTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201711061818328_MergedInTriggerUpdateFromMaster.resx">
+      <DependentUpon>201711061818328_MergedInTriggerUpdateFromMaster.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
