--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -852,6 +852,7 @@
     </None>
     <None Include="Web.Staging.config">
       <DependentUpon>Web.config</DependentUpon>
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
