--- a/Odin.ToSeWebJob/packages.config
+++ b/Odin.ToSeWebJob/packages.config
@@ -1,17 +1,28 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="5.2.0" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.7.0" targetFramework="net461" />
   <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Entity" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Azure.Mobile.Server.Tables" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Azure.ServiceBus.EventProcessorHost" version="2.2.10" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs.Core" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Azure.WebJobs.ServiceBus" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.Data.Edm" version="5.7.0" targetFramework="net461" />
-  <package id="Microsoft.Data.OData" version="5.7.0" targetFramework="net461" />
-  <package id="Microsoft.Data.Services.Client" version="5.7.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.8.1" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.8.1" targetFramework="net461" />
+  <package id="Microsoft.Data.Services.Client" version="5.8.1" targetFramework="net461" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.1.0" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
-  <package id="System.Spatial" version="5.7.0" targetFramework="net461" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.8.1" targetFramework="net461" />
   <package id="WindowsAzure.ServiceBus" version="3.4.5" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="7.2.1" targetFramework="net461" />
 </packages>
