Add azure storage emulator tests

--- a/Odin/Web.config
+++ b/Odin/Web.config
@@ -20,6 +20,7 @@
     <add key="SendGridAPIKey" value="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" />
     <add key="DWOdinTeamEmailFrom" value="odin@dwellworks.com" />
     <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="WindowsAzureStorageEmulatorPath" value="C:\Program Files (x86)\Microsoft SDKs\Azure\Storage Emulator\WAStorageEmulator.exe"/>
   </appSettings>
   <system.web>
     <customErrors mode="Off" />
