--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -109,6 +109,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
@@ -156,6 +157,7 @@
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Helpers\AccountHelperTests.cs" />
     <Compile Include="Helpers\DateHelperTests.cs" />
+    <Compile Include="Helpers\AzureStorageEmulatorManagerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Helpers\HTMLHelpersTests.cs" />
     <Compile Include="Views\Helpers\MockContext.cs" />
