--- a/Odin.IntegrationTests/App.Release.config
+++ b/Odin.IntegrationTests/App.Release.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration  xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
+  <appSettings>
+    <add key="IsLocalTestingEnvironment" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add key="StorageConnectionString" value="#{AzureIntegrationStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+  </appSettings>
+  
   <connectionStrings>
     <add name="DefaultConnection"
          connectionString="#{AzureIntegrationDBConnectionString}#"
