--- a/Odin.IntegrationTests/App.config
+++ b/Odin.IntegrationTests/App.config
@@ -6,6 +6,9 @@
   </configSections>
   <appSettings>
     <add key="SeApiToken" value="SeApiTokenKeyTest" />
+    <add key="IsLocalTestingEnvironment" value="true" />
+    <add key="StorageConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="WindowsAzureStorageEmulatorPath" value="C:\Program Files (x86)\Microsoft SDKs\Azure\Storage Emulator\AzureStorageEmulator.exe"/>
   </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=Odin-integration;Integrated Security=True" providerName="System.Data.SqlClient" />
