--- a/Odin/Web.Staging.config
+++ b/Odin/Web.Staging.config
@@ -17,6 +17,7 @@
 
   <appSettings>
     <add key="SeApiToken" value="BY8WgFhL9LHf4NRGhuEmAQsNb" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="StorageConnectionString" value="#{AzureStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
   
   <connectionStrings>
