--- a/Odin.IntegrationTests/App.Release.config
+++ b/Odin.IntegrationTests/App.Release.config
@@ -2,8 +2,8 @@
 <configuration  xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
 
   <appSettings>
-    <add key="IsLocalTestingEnvironment" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
-    <add key="StorageConnectionString" value="#{AzureIntegrationStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add key="IsLocalTestingEnvironment" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="StorageConnectionString" value="#{AzureIntegrationStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
   
   <connectionStrings>
