--- a/Odin.IntegrationTests/App.Staging.config
+++ b/Odin.IntegrationTests/App.Staging.config
@@ -3,8 +3,8 @@
 
 
   <appSettings>
-    <add key="IsLocalTestingEnvironment" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
-    <add key="StorageConnectionString" value="#{AzureIntegrationStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    <add key="IsLocalTestingEnvironment" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="StorageConnectionString" value="#{AzureIntegrationStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
   <connectionStrings>
