--- a/Odin/Web.Release.config
+++ b/Odin/Web.Release.config
@@ -17,6 +17,7 @@
 
   <appSettings>
     <add key="SeApiToken" value="l49WKKZ99mlq0bkiFPODizQ1X" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
+    <add key="StorageConnectionString" value="#{AzureStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
 
   <connectionStrings>
