--- a/Odin.ToSeWebJob/App.Staging.config
+++ b/Odin.ToSeWebJob/App.Staging.config
@@ -20,6 +20,14 @@
          connectionString="#{AzureDBConnectionString}#"
          xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
 
+    <add name="AzureWebJobsDashboard"
+         connectionString="#{AzureWebJobsDashboardConnectionString}#"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+
+    <add name="AzureWebJobsStorage"
+         connectionString="#{AzureWebJobsStorageConnectionString}#"
+         xdt:Transform="SetAttributes" xdt:Locator="Match(name)" />
+    
   </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
