--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -112,6 +112,9 @@
     <Reference Include="Ninject.Web.WebApi.OwinHost, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
       <HintPath>..\packages\Ninject.Web.WebApi.OwinHost.3.2.4.0\lib\net45-full\Ninject.Web.WebApi.OwinHost.dll</HintPath>
     </Reference>
+    <Reference Include="RazorEngine, Version=3.10.0.0, Culture=neutral, PublicKeyToken=9ee697374c7e744a, processorArchitecture=MSIL">
+      <HintPath>..\packages\RazorEngine.3.10.0\lib\net45\RazorEngine.dll</HintPath>
+    </Reference>
     <Reference Include="SendGrid, Version=9.8.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
       <HintPath>..\packages\Sendgrid.9.9.0\lib\net452\SendGrid.dll</HintPath>
     </Reference>
@@ -332,7 +335,8 @@
     <Compile Include="ViewModels\Authentication\SetPasswordViewModel.cs" />
     <Compile Include="ViewModels\Authentication\VerifyCodeViewModel.cs" />
     <Compile Include="ViewModels\Authentication\VerifyPhoneNumberViewModel.cs" />
-    <Compile Include="ViewModels\Mailers\SetNewPasswordViewModel.cs" />
+    <Compile Include="ViewModels\Mailers\CreatePasswordViewModel.cs" />
+    <Compile Include="ViewModels\Mailers\ResetPasswordViewModel.cs" />
     <Compile Include="ViewModels\Orders\Index\OrdersIndexViewModel.cs" />
     <Compile Include="ViewModels\Mailers\ViewRenderer.cs" />
     <Compile Include="ViewModels\Orders\Transferee\HousingPropertyViewModel.cs" />
@@ -360,10 +364,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\transferee\details.css">
-	<DependentUpon>details.scss</DependentUpon>
-	</Content>
+      <DependentUpon>details.scss</DependentUpon>
+    </Content>
     <Content Include="Content\css\transferee\details.min.css">
-	<DependentUpon>details.css</DependentUpon>
+      <DependentUpon>details.css</DependentUpon>
     </Content>
     <Content Include="Content\css\transferee\history.css">
       <DependentUpon>history.scss</DependentUpon>
@@ -565,6 +569,8 @@
       <DependentUpon>forgotpassword.css</DependentUpon>
     </Content>
     <Content Include="Content\Images\bg_gradient_forgot_password.png" />
+    <Content Include="Content\Images\bg_img_3.png" />
+    <Content Include="Content\Images\bg_img_w_gradient.png" />
     <Content Include="Content\Images\check.png" />
     <Content Include="Content\Images\btn_add_home.png" />
     <Content Include="Content\Images\collapse.png" />
