--- a/Odin/Web.Release.config
+++ b/Odin/Web.Release.config
@@ -16,7 +16,7 @@
   -->
 
   <appSettings>
-    <add key="IsLocalTestingEnvironment" value="false" />
+    <add key="IsLocalTestingEnvironment" value="false" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     <add key="SeApiToken" value="l49WKKZ99mlq0bkiFPODizQ1X" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
     <add key="StorageConnectionString" value="#{AzureStorageConnectionString}#" xdt:Transform="SetAttributes" xdt:Locator="Match(key)" />
   </appSettings>
