--- a/Odin.Tests/Odin.Tests.csproj
+++ b/Odin.Tests/Odin.Tests.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Extensions\ControllerExtensions.cs" />
     <Compile Include="Helpers\AccountHelperTests.cs" />
     <Compile Include="Helpers\DateHelperTests.cs" />
+    <Compile Include="Helpers\ServiceHelperTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Helpers\HTMLHelpersTests.cs" />
     <Compile Include="Views\Helpers\MockContext.cs" />
