Making the list of properties a partial

--- a/Odin/Odin.csproj
+++ b/Odin/Odin.csproj
@@ -875,6 +875,7 @@
     <Content Include="Views\Orders\Partials\_Messages.cshtml" />
     <Content Include="Views\Orders\Partials\_History.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\CreateHousingProperty.cshtml" />
+    <Content Include="Views\Orders\Partials\_HousingProperties.cshtml" />
     <None Include="Web.Azure.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
