Switching to a decimal for number of bathrooms on property model.

--- a/Odin.Data/Odin.Data.csproj
+++ b/Odin.Data/Odin.Data.csproj
@@ -432,6 +432,10 @@
     <Compile Include="Persistence\Migrations\201711131931315_MergeNov13.Designer.cs">
       <DependentUpon>201711131931315_MergeNov13.cs</DependentUpon>
     </Compile>
+    <Compile Include="Persistence\Migrations\201711151901404_SwitchNumberOfBathsOnProperty.cs" />
+    <Compile Include="Persistence\Migrations\201711151901404_SwitchNumberOfBathsOnProperty.Designer.cs">
+      <DependentUpon>201711151901404_SwitchNumberOfBathsOnProperty.cs</DependentUpon>
+    </Compile>
     <Compile Include="Persistence\Migrations\Configuration.cs" />
     <Compile Include="Persistence\NumberOfBathroomsTypesRepository.cs" />
     <Compile Include="Persistence\OrdersRepository.cs" />
@@ -620,6 +624,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Persistence\Migrations\201711131931315_MergeNov13.resx">
       <DependentUpon>201711131931315_MergeNov13.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Persistence\Migrations\201711151901404_SwitchNumberOfBathsOnProperty.resx">
+      <DependentUpon>201711151901404_SwitchNumberOfBathsOnProperty.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
